--- a/jqueryfile.html
+++ b/jqueryfile.html
@@ -16,7 +16,10 @@
     <style>
         body {
             font-family: Arial;
-            background: linear-gradient(to right, #2d7caa, #9face6);
+
+            /* I changed the background color
+            now going to commit  */
+            background: linear-gradient(to right, #0b91e5, #ebe41c);
             padding: 40px;
         }
 
